# BandAuto

./: .gitignore  LICENSE  README.md  pyproject.toml  readme.md  sample_device.py  test_adapter.py  test_adapter_and_analyzer.py
data/statistics/: bandage_vs_tradition.json  bandage_vs_tradition_coupler_only.json
defective_surface_code_adapter/: __init__.py
defective_surface_code_adapter/adapter/: __init__.py  adapter.py  data.py  tranditional.py
defective_surface_code_adapter/analyzer/: __init__.py  analyzer.py  data.py  traditional.py
defective_surface_code_adapter/circuit_builder/: __init__.py  base_builder.py  data.py  stim_builder.py
defective_surface_code_adapter/circuit_constructor/: base_constructor.py  data.py  stim_constructor.py
defective_surface_code_adapter/device/: device.py
defective_surface_code_adapter/plot/: plot.py
defective_surface_code_adapter/sampler/: __init__.py  sinter_sampler.py
defective_surface_dode_adapter/adapter/: adapter.py  data.py
defective_surface_dode_adapter/plot/: __init__.py  plot.py
device_pool/: readme.md
device_pool/device_d21_qdr0.02_cdr0.02/: cycle_selected_by_p0.002.json  cycle_selected_by_ratio0.36_floor.json
device_pool/devices/: device_0407e52b1fc3652d87e8f57709b50aac16b005c72604c610e531da2adbf6f7c1.pkl  device_0927d9540e635e9813aa291684e4ec9f9726db5776d5100d886620501ca7baac.pkl  device_1f63551552c49ffaa793330f1e3a9e121cf902a7c58641eb6ed2cb9e217e3768.pkl  device_234e9d07ea1b7874995829a43cc5b252fef8a6c76dc6aaac0d276356ec121dd3.pkl  device_2cd5746660fb17d2e0bd2c08e141e2a46ef8a40d2f9942bf65706cd3448fb0d4.pkl  device_2ddd39fbd1ed16116a6e2930ae8b79824c4a894bf571db48b6c1b2864738030f.pkl  (+58 more)
scripts/: 1device.py  d7_analyse.py  d7_sim.py  gen_device_pool.py  minimum_pos.py  sample_all_devices.py  spec_avg_max_diff.py
scripts/analyse/: 1device.py  1device_specified.py  (+12 more)
sp_data/: bcmp.pkl  bcmp1.pkl  bcmp3.pkl  cmp_statistics.json  cmp_statistics_coupler_only.json  nshell_p_cor.pkl
(+5304 files in other folders)
