[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "defective-surface-code-adapter"
version = "0.1.0"
description = "This repo facilitated an fully automatic adapter using bandage-like super-stabilizer for the surface code on defective lattice"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Zuolin Wei", email = "devyswei@mail.ustc.edu.cn" }
]
keywords = ["quantum error correction", "surface code", "defective lattice", "bandage", "super-stabilizer"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "networkx",
    "matplotlib",
]

[project.urls]
"Homepage" = "https://github.com/DeviesVi/defective_surface_code_adapter"

[tool.setuptools]
packages = ["defective-surface-code-adapter"]